pod-security-vpol/baseline/disallow-host-ports/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-ports
policies:
- ../disallow-host-ports.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: CronJob
  policy: disallow-host-ports
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  - badcronjob04
  - badcronjob05
  - badcronjob06
  - badcronjob07
  - badcronjob08
  - badcronjob09
  - badcronjob10
  result: fail
  rule: host-ports-none
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-host-ports
  resources:
  - baddeployment01
  - baddeployment02
  - baddeployment03
  - baddeployment04
  - baddeployment05
  - baddeployment06
  - baddeployment07
  - baddeployment08
  - baddeployment09
  - baddeployment10
  result: fail
  rule: host-ports-none
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-host-ports
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04
  - badpod05
  - badpod06
  - badpod07
  - badpod08
  - badpod09
  - badpod10
  result: fail
  rule: host-ports-none
- isValidatingPolicy: true
  kind: CronJob
  policy: disallow-host-ports
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  - goodcronjob06
  - goodcronjob07
  - goodcronjob08
  - goodcronjob09
  - goodcronjob10
  result: pass
  rule: host-ports-none
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-host-ports
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  - gooddeployment06
  - gooddeployment07
  - gooddeployment08
  - gooddeployment09
  - gooddeployment10
  result: pass
  rule: host-ports-none
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-host-ports
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  - goodpod07
  - goodpod08
  - goodpod09
  - goodpod10
  result: pass
  rule: host-ports-none
